--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     container_name: youtube-subtitle-proxy
     restart: unless-stopped
     ports:
-      - "12033:3000"
+      - "12033:12033"
     environment:
       - NODE_ENV=production
-      - PORT=3000
+      - PORT=12033
       # OpenAI API Configuration
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - OPENAI_BASE_URL=${OPENAI_BASE_URL:-https://api.openai.com/v1}
@@ -40,7 +40,7 @@ services:
       # Persist SQLite database (named volume avoids host permission issues)
       - subtitles-data:/app/data
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: ["CMD", "node", "-e", "const port = process.env.PORT || 3000; require('http').get('http://localhost:' + port + '/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
       timeout: 3s
       retries: 3
