--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4o
 TRANSLATE_TIMEOUT_MS=20000
 QUEUE_CONCURRENCY=2
+TRANSLATION_SUMMARY_ENABLED=true
+TRANSLATION_SUMMARY_MAX_TOKENS=200
+TRANSLATION_SUMMARY_CHUNK_CHARS=12000
 
 # 数据库
 DB_PATH=./data/subtitles.db
@@ -31,6 +34,7 @@ YT_FETCH_TIMEOUT_MS=5000
 SEGMENT_GAP_MS=1200
 SEGMENT_MIN_DURATION_MS=3000
 SEGMENT_MAX_DURATION_MS=7000
+SRV3_OVERLAP_GAP_MS=100
 
 # 可选：管理接口
 ADMIN_TOKEN=
