--- a/.env.production.example
+++ b/.env.production.example
@@ -24,6 +24,11 @@ OPENAI_MODEL=gpt-4o
 # Translation timeout (milliseconds)
 TRANSLATE_TIMEOUT_MS=20000
 
+# Translation Summary (Optional)
+TRANSLATION_SUMMARY_ENABLED=true
+TRANSLATION_SUMMARY_MAX_TOKENS=200
+TRANSLATION_SUMMARY_CHUNK_CHARS=12000
+
 # Queue Configuration
 # Higher concurrency = faster translation but more API costs
 # Recommended: 8-16 for production
@@ -48,6 +53,7 @@ YT_FETCH_TIMEOUT_MS=5000
 SEGMENT_GAP_MS=1200
 SEGMENT_MIN_DURATION_MS=3000
 SEGMENT_MAX_DURATION_MS=7000
+SRV3_OVERLAP_GAP_MS=100
 
 # Admin API Protection (Optional)
 # Leave empty to disable, or set a secure token
