--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - OPENAI_BASE_URL=${OPENAI_BASE_URL:-https://api.openai.com/v1}
       - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4o}
       - TRANSLATE_TIMEOUT_MS=${TRANSLATE_TIMEOUT_MS:-20000}
+      - TRANSLATION_SUMMARY_ENABLED=${TRANSLATION_SUMMARY_ENABLED:-true}
+      - TRANSLATION_SUMMARY_MAX_TOKENS=${TRANSLATION_SUMMARY_MAX_TOKENS:-200}
+      - TRANSLATION_SUMMARY_CHUNK_CHARS=${TRANSLATION_SUMMARY_CHUNK_CHARS:-12000}
       # Queue Configuration
       - QUEUE_CONCURRENCY=${QUEUE_CONCURRENCY:-16}
       - MAX_RETRIES=${MAX_RETRIES:-3}
@@ -34,6 +37,7 @@ services:
       - SEGMENT_GAP_MS=${SEGMENT_GAP_MS:-1200}
       - SEGMENT_MIN_DURATION_MS=${SEGMENT_MIN_DURATION_MS:-3000}
       - SEGMENT_MAX_DURATION_MS=${SEGMENT_MAX_DURATION_MS:-7000}
+      - SRV3_OVERLAP_GAP_MS=${SRV3_OVERLAP_GAP_MS:-100}
       # Admin
       - ADMIN_TOKEN=${ADMIN_TOKEN:-}
     volumes:
