--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,24 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4o
 TRANSLATE_TIMEOUT_MS=20000
 QUEUE_CONCURRENCY=32
+
+# Translation guidance
+# Summary stays in source language; Glossary is JSON (source -> target).
+# Context batches translate in parallel; higher concurrency is faster but risks rate limits.
+# Batch retries help recover from malformed responses before falling back.
 TRANSLATION_SUMMARY_ENABLED=true
 TRANSLATION_SUMMARY_MAX_TOKENS=500
 TRANSLATION_SUMMARY_CHUNK_CHARS=12000
+TRANSLATION_GLOSSARY_ENABLED=true
+TRANSLATION_GLOSSARY_MAX_TOKENS=200
+TRANSLATION_GLOSSARY_CHUNK_CHARS=12000
+TRANSLATION_CONTEXT_ENABLED=true
+TRANSLATION_CONTEXT_BATCH_SIZE=8
+TRANSLATION_CONTEXT_PRECEDING_LINES=4
+TRANSLATION_CONTEXT_FOLLOWING_LINES=2
+TRANSLATION_CONTEXT_CONCURRENCY=2
+TRANSLATION_CONTEXT_BATCH_RETRIES=1
+TRANSLATION_CONTEXT_MAX_TOKENS=800
 
 # 数据库
 DB_PATH=./data/subtitles.db
