--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,16 @@ services:
       - TRANSLATION_SUMMARY_ENABLED=${TRANSLATION_SUMMARY_ENABLED:-true}
       - TRANSLATION_SUMMARY_MAX_TOKENS=${TRANSLATION_SUMMARY_MAX_TOKENS:-200}
       - TRANSLATION_SUMMARY_CHUNK_CHARS=${TRANSLATION_SUMMARY_CHUNK_CHARS:-12000}
+      - TRANSLATION_GLOSSARY_ENABLED=${TRANSLATION_GLOSSARY_ENABLED:-true}
+      - TRANSLATION_GLOSSARY_MAX_TOKENS=${TRANSLATION_GLOSSARY_MAX_TOKENS:-200}
+      - TRANSLATION_GLOSSARY_CHUNK_CHARS=${TRANSLATION_GLOSSARY_CHUNK_CHARS:-12000}
+      - TRANSLATION_CONTEXT_ENABLED=${TRANSLATION_CONTEXT_ENABLED:-true}
+      - TRANSLATION_CONTEXT_BATCH_SIZE=${TRANSLATION_CONTEXT_BATCH_SIZE:-8}
+      - TRANSLATION_CONTEXT_PRECEDING_LINES=${TRANSLATION_CONTEXT_PRECEDING_LINES:-4}
+      - TRANSLATION_CONTEXT_FOLLOWING_LINES=${TRANSLATION_CONTEXT_FOLLOWING_LINES:-2}
+      - TRANSLATION_CONTEXT_CONCURRENCY=${TRANSLATION_CONTEXT_CONCURRENCY:-2}
+      - TRANSLATION_CONTEXT_BATCH_RETRIES=${TRANSLATION_CONTEXT_BATCH_RETRIES:-1}
+      - TRANSLATION_CONTEXT_MAX_TOKENS=${TRANSLATION_CONTEXT_MAX_TOKENS:-800}
       # Queue Configuration
       - QUEUE_CONCURRENCY=${QUEUE_CONCURRENCY:-16}
       - MAX_RETRIES=${MAX_RETRIES:-3}
