--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,45 +12,9 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=12033
-      # OpenAI API Configuration
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - OPENAI_BASE_URL=${OPENAI_BASE_URL:-https://api.openai.com/v1}
-      - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4o}
-      - TRANSLATE_TIMEOUT_MS=${TRANSLATE_TIMEOUT_MS:-20000}
-      - TRANSLATION_SUMMARY_ENABLED=${TRANSLATION_SUMMARY_ENABLED:-true}
-      - TRANSLATION_SUMMARY_MAX_TOKENS=${TRANSLATION_SUMMARY_MAX_TOKENS:-200}
-      - TRANSLATION_SUMMARY_CHUNK_CHARS=${TRANSLATION_SUMMARY_CHUNK_CHARS:-12000}
-      - TRANSLATION_GLOSSARY_ENABLED=${TRANSLATION_GLOSSARY_ENABLED:-true}
-      - TRANSLATION_GLOSSARY_MAX_TOKENS=${TRANSLATION_GLOSSARY_MAX_TOKENS:-200}
-      - TRANSLATION_GLOSSARY_CHUNK_CHARS=${TRANSLATION_GLOSSARY_CHUNK_CHARS:-12000}
-      - TRANSLATION_CONTEXT_ENABLED=${TRANSLATION_CONTEXT_ENABLED:-true}
-      - TRANSLATION_CONTEXT_BATCH_SIZE=${TRANSLATION_CONTEXT_BATCH_SIZE:-8}
-      - TRANSLATION_CONTEXT_PRECEDING_LINES=${TRANSLATION_CONTEXT_PRECEDING_LINES:-4}
-      - TRANSLATION_CONTEXT_FOLLOWING_LINES=${TRANSLATION_CONTEXT_FOLLOWING_LINES:-2}
-      - TRANSLATION_CONTEXT_CONCURRENCY=${TRANSLATION_CONTEXT_CONCURRENCY:-2}
-      - TRANSLATION_CONTEXT_BATCH_RETRIES=${TRANSLATION_CONTEXT_BATCH_RETRIES:-1}
-      - TRANSLATION_CONTEXT_MAX_TOKENS=${TRANSLATION_CONTEXT_MAX_TOKENS:-800}
-      # Queue Configuration
-      - QUEUE_CONCURRENCY=${QUEUE_CONCURRENCY:-16}
-      - MAX_RETRIES=${MAX_RETRIES:-3}
-      - RETRY_BASE_MS=${RETRY_BASE_MS:-5000}
-      # Cache Configuration
-      - CACHE_TTL_HOURS=${CACHE_TTL_HOURS:-720}
-      - LRU_MAX_ITEMS=${LRU_MAX_ITEMS:-1000}
-      - CLEANUP_INTERVAL_MS=${CLEANUP_INTERVAL_MS:-3600000}
-      # Database
-      - DB_PATH=/app/data/subtitles.db
-      - DB_VERBOSE=${DB_VERBOSE:-false}
-      # YouTube
-      - YT_FETCH_TIMEOUT_MS=${YT_FETCH_TIMEOUT_MS:-5000}
-      # Subtitle
-      - SEGMENT_GAP_MS=${SEGMENT_GAP_MS:-1200}
-      - SEGMENT_MIN_DURATION_MS=${SEGMENT_MIN_DURATION_MS:-3000}
-      - SEGMENT_MAX_DURATION_MS=${SEGMENT_MAX_DURATION_MS:-7000}
-      - SRV3_OVERLAP_GAP_MS=${SRV3_OVERLAP_GAP_MS:-100}
-      # Admin
-      - ADMIN_TOKEN=${ADMIN_TOKEN:-}
     volumes:
+      # Load runtime config from host .env (read-only)
+      - ./.env:/app/.env:ro
       # Persist SQLite database (named volume avoids host permission issues)
       - subtitles-data:/app/data
     healthcheck:
